--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,3 +65,9 @@ img {
     left: 50%;
     transform: translate(-50%, -50%)
 }
+
+.max {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto
+}
