--- a/components/public/order.module.css
+++ b/components/public/order.module.css
@@ -1,3 +1,25 @@
-.d1 {
-    color: rebeccapurple
+.box {
+    border: 1px solid #B9B9B9;
+    padding: 40px 50px;
+    border-radius: 20px;
 }
+
+.d1 {
+    font-weight: bold;
+    font-size: 18px;
+    color: #065A89;
+}
+.d1 > p:nth-child(2){
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 26px;
+    color: #111111;
+}
+
+.but {
+    border: 1px solid #F69292;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+
