--- a/components/public/order.module.css
+++ b/components/public/order.module.css
@@ -4,22 +4,37 @@
     border-radius: 20px;
 }
 
-.d1 {
+.box > div:nth-child(1) {
     font-weight: bold;
     font-size: 18px;
     color: #065A89;
 }
-.d1 > p:nth-child(2){
+.box > div:nth-child(1) > p{
     font-weight: bold;
     font-size: 22px;
     line-height: 26px;
     color: #111111;
 }
 
-.but {
-    border: 1px solid #F69292;
-    box-sizing: border-box;
-    border-radius: 4px;
+.box > div:nth-child(2) > span {
+    color: green;
 }
 
+.box > div:nth-child(2) button {
+    border: 1px solid #F69292;
+    box-sizing: border-box;
+    border-radius: 4px
+}
+
+.box > p {
+    color: pink
+}
+
+.box > div:nth-child(4) > p {
+    color: red
+}
+
+.box > div:nth-child(4) > span {
+    color: #6f7580;
+}
 
