--- a/components/public/order.module.css
+++ b/components/public/order.module.css
@@ -1,31 +1,32 @@
 .box {
     border: 1px solid #B9B9B9;
     padding: 40px 50px;
-    border-radius: 20px;
-    margin-bottom: 20px;
+    border-radius: 15px;
+    margin-bottom: 20px
 }
 
 .box > div:nth-child(1) {
     font-weight: bold;
     font-size: 1.1rem;
     color: #065A89;
+    position: relative
 }
 
 .box > div:nth-child(1) > span {
     font-weight: bold;
     font-size: 1.4rem;
     line-height: 26px;
-    color: #111111;
+    color: #111111
 }
 
 .box > div:nth-child(2) {
-    margin: 25px 0;
+    margin: 25px 0
 }
 
 .box > div:nth-child(2) > span {
     font-weight: bold;
     font-size: 1rem;
-    margin-right: 20px;
+    margin-right: 20px
 }
 
 .box > div:nth-child(2) button {
@@ -36,117 +37,112 @@
     border: 1px solid #F69292;
     box-sizing: border-box;
     border-radius: 4px;
-    margin-right: 10px;
+    margin-right: 10px
 }
 
 .box > div:nth-child(2) button:hover {
     background: #f69292;
     color: white;
-    -webkit-transition: all 023s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease
 }
 
 .box > div:nth-child(2) button:nth-child(3) {
     color: #4DA8FE;
-    border: 1px solid #4DA8FE;
+    border: 1px solid #4DA8FE
 }
 
 .box > div:nth-child(2) button:nth-child(3):hover {
     background: #4DA8FE;
     color: white;
-    -webkit-transition: all 023s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease
 }
 
 .box > p {
     line-height: 130%;
-    margin-bottom: 25px;
+    margin-bottom: 25px
 }
 
-.box > div:nth-child(4) > p {
+.box > div:nth-child(4) {
     font-size: 0.8rem;
-    color: #9D9D9D;
+    color: #9D9D9D
 }
-
-.box > div:nth-child(4) > span {
-    font-size: 0.8rem;
-    color: #9D9D9D;
-}
-
 
 
 @media screen and (max-width: 1000px) {
     .box {
         padding: 20px 25px;
-        border-radius: 8px;
+        border-radius: 8px
     }
 
     .box > div:nth-child(1) {
-        font-size: 1rem;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+        font-size: 1rem
     }
 
     .box > div:nth-child(2) > span {
-        font-size: 0.8rem;
+        font-size: 0.8rem
     }
 
     .box > div:nth-child(1) > p {
-        max-width: 80%;
+        max-width: calc(100% - 78px)
     }
 
     .box > div:nth-child(2) {
-        margin: 10px 0;
+        margin: 10px 0
     }
 
     .box > p {
         font-size: 0.8rem;
-        margin-bottom: 20px;
+        margin-bottom: 20px
     }
 
     .box > div:nth-child(4) > p {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        font-size: 0.8rem;
+        font-size: 0.8rem
     }
 
 
     .box > div:nth-child(2) button {
         padding: 5px 10px;
-        font-size: 0.8rem;
+        font-size: 0.8rem
     }
 
     .box > div:nth-child(4) > p {
         color: #9D9D9D;
-        margin-bottom: 10px;
+        margin-bottom: 10px
     }
 
     .box > div:nth-child(4) > span {
-        color: #000000;
+        color: #000000
     }
 }
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 600px) {
     .box {
-        padding: 20px 25px;
-        border-radius: 0px;
+        padding: 20px 15px;
+        border-radius: 0;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        margin-bottom: 0
     }
 
-    .box > div:nth-child(1) > p {
-        max-width: 60%;
+    .box:first-of-type {
+        border-top: 1px solid #B9B9B9
+    }
+
+
+    .box > div:nth-child(1) > span {
+        font-size: 1.1rem;
+        position: absolute;
+        right: 0;
+        top: 0
     }
 
     .box > div:nth-child(2) > span {
-
+        width: 100%;
+        margin-bottom: 10px
     }
 
     .box > div:nth-child(2) button {
-        font-size: 0.7rem;
+        font-size: 0.7rem
     }
 }
