--- a/components/public/comment.module.css
+++ b/components/public/comment.module.css
@@ -1,14 +1,3 @@
-.bg {
-    position: absolute;
-    width: 1920px;
-    height: 560px;
-    left: 0px;
-    top: 653px;
-
-    background: #F6F6F6;
-    opacity: 0.8;
-}
-
 .d1 {
     /*width: 355px;*/
     border-radius: 12px;
@@ -20,8 +9,40 @@
 }
 
 .d1 > div:first-child svg {
-    color: green
+    color: #47CB43
 }
+
+.d1 div:nth-child(1) {
+    padding-bottom: 8px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #DAF5D9;
+}
+
+.d1 div:nth-child(1) > p{
+    font-size: 0.9rem;
+    margin-right: 90px;
+    color: #47CB43;
+}
+
+.d1 div:nth-child(1) > span {
+    color: #47CB43;
+}
+
+.d1 div:nth-child(2) > img{
+    border-radius: 50px;
+    border: 2px solid #47CB43;
+}
+
+.d1 p:nth-child(3) {
+    line-height: 1.4rem;
+    color: #a731c7;
+}
+
+.d1 :nth-child(2) {
+    color: #c7427c;
+}
+
+
 
 @media all and (max-width: 390px) {
     .d1 {
