--- a/components/public/order.module.css
+++ b/components/public/order.module.css
@@ -14,13 +14,8 @@
 
 .box > div:nth-child(1) > span {
     font-size: 1.4rem;
-<<<<<<< HEAD
     line-height: 1.6rem;
-    color: #111111
-=======
-    line-height: 26px;
-    color: #111
->>>>>>> 6781acc03f16f5f1e4d664c3e74a0e5c10b23cbc
+    color: #111;
 }
 
 .box > div:nth-child(2) {
