--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -1,5 +1,88 @@
 .bg {
     padding: 50px 0;
-    background-color: #F8F8F8;
+    background-color: #AAA;
     width: 100%
+}
+
+.hr1 {
+    background-color: #E2FFE1;
+    width: 100%;
+    min-height: 300px
+}
+
+.hr1 h1 {
+    font-size: 2rem;
+    margin: 30px 0 15px 0
+}
+
+.hr1 form {
+    width: 100%;
+    max-width: 680px;
+    position: relative;
+    margin-bottom: 30px;
+    z-index: 2;
+}
+
+.hr1 input[type=text] {
+    width: 100%;
+    min-height: 70px;
+    font-size: 1rem;
+    text-indent: 30px;
+    border-radius: 8px;
+    border: 1px solid #47CB43
+}
+
+.hr1 input[type=text]:focus {
+    outline: transparent;
+    box-shadow: inset 0 5px 10px #d6fed5;
+}
+
+.hr1 input[type=submit] {
+    position: absolute;
+    color: #47CB43;
+    text-shadow: 0 0 0 #47CB43;
+    height: 100%;
+    width: max-content;
+    right: 4%;
+    background-color: transparent;
+    border: none;
+    font-size: 1rem
+}
+
+.d2 {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    z-index: 1;
+    color: #71C36E;
+}
+
+.d2 > div > div {
+    max-width: 380px;
+    justify-content: flex-end;
+    margin-bottom: 30px;
+    line-height: 140%
+}
+
+.d2 b {
+    font-size: 1.1rem;
+    margin-bottom: 5px
+}
+
+.pg {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.3rem;
+    max-width: 100px;
+    color: #71C36E;
+    z-index: 3
+}
+
+.pg button {
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    padding-bottom: 3px
 }
