--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,12 +24,17 @@ a, button, input[type=submit] { cursor: pointer }
 
 a, a:active, a:visited {
   color: inherit;
-  text-decoration: none;
+  text-decoration: none
+}
+
+button {
+    font-size: inherit;
+    color: inherit
 }
 
 img {
     max-width: 100%;
-    height: auto;
+    height: auto
 }
 
 .row, .col {
