--- a/components/public/comment.module.css
+++ b/components/public/comment.module.css
@@ -8,24 +8,16 @@
 
 }
 
-.d1 > div:first-child svg {
-    color: #47CB43
-}
-
 .d1 div:nth-child(1) {
     padding-bottom: 8px;
     margin-bottom: 15px;
     border-bottom: 1px solid #DAF5D9;
+    color: #47CB43
 }
 
 .d1 div:nth-child(1) > p{
     font-size: 0.9rem;
     margin-right: 90px;
-    color: #47CB43;
-}
-
-.d1 div:nth-child(1) > span {
-    color: #47CB43;
 }
 
 .d1 div:nth-child(2) > img{
@@ -33,15 +25,14 @@
     border: 2px solid #47CB43;
 }
 
+.d1 div:nth-child(2) > svg {
+    color: #47CB43
+}
+
 .d1 p:nth-child(3) {
     line-height: 1.4rem;
     color: #a731c7;
 }
-
-.d1 :nth-child(2) {
-    color: #c7427c;
-}
-
 
 
 @media all and (max-width: 390px) {
