--- a/components/public/comment.module.css
+++ b/components/public/comment.module.css
@@ -1,11 +1,9 @@
 .d1 {
-    /*width: 355px;*/
     border-radius: 12px;
     background-color: white;
     width: 100%;
     max-width: 360px;
-    padding: 30px;
-
+    padding: 30px
 }
 
 .d1 div:nth-child(1) {
@@ -15,14 +13,14 @@
     color: #47CB43
 }
 
-.d1 div:nth-child(1) > p{
+.d1 div:nth-child(1) > p {
     font-size: 0.9rem;
-    margin-right: 90px;
+    margin-right: 90px
 }
 
-.d1 div:nth-child(2) > img{
+.d1 div:nth-child(2) > img {
     border-radius: 50px;
-    border: 2px solid #47CB43;
+    border: 2px solid #47CB43
 }
 
 .d1 div:nth-child(2) > svg {
@@ -31,14 +29,12 @@
 
 .d1 p:nth-child(3) {
     line-height: 1.4rem;
-    color: #a731c7;
+    color: #a731c7
 }
-
 
 @media all and (max-width: 390px) {
     .d1 {
         padding: 15px
     }
 }
-
 
