added slider on main page

--- a/components/slider.module.css
+++ b/components/slider.module.css
@@ -72,8 +72,12 @@
     top: 50%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
-    fill: #fff;
+    fill: #777;
     cursor: pointer;
+}
+
+.arrow:hover {
+    fill: #AAA
 }
 
 .arrow_left {
