--- a/components/public/comment.module.css
+++ b/components/public/comment.module.css
@@ -1,4 +1,5 @@
 .d1 {
+    position: relative;
     border-radius: 12px;
     background-color: white;
     width: 100%;
@@ -15,7 +16,7 @@
 
 .d1 div:nth-child(1) > p {
     font-size: 0.9rem;
-    margin-right: 90px
+    margin-right: 80px
 }
 
 .d1 div:nth-child(2) > img {
@@ -27,9 +28,23 @@
     color: #47CB43
 }
 
+.d1 div:nth-child(2) > span {
+    position: absolute;
+    left: 113px;
+    top: 120px;
+    font-size: 0.8rem;
+    color: #9D9D9D;
+}
+
 .d1 p:nth-child(3) {
     line-height: 1.4rem;
-    color: #a731c7
+    margin-top: 10px;
+}
+
+.d1 span:nth-child(4) {
+    margin-top: 10px;
+    font-size: 0.8rem;
+    color: #9D9D9D;
 }
 
 @media all and (max-width: 390px) {
