--- a/components/public/comment.module.css
+++ b/components/public/comment.module.css
@@ -36,6 +36,10 @@
     color: #9D9D9D;
 }
 
+.d1 div:nth-child(2) > b {
+    max-width: calc(100% - 107px);
+}
+
 .d1 p:nth-child(3) {
     line-height: 1.4rem;
     margin-top: 10px;
