--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -3,12 +3,6 @@
     width: 100%
 }
 
-.select select {
-    margin-right: 15px;
-    min-width: 60px;
-    cursor: pointer
-}
-
 .form input, .form select {
     font-size: 1rem;
 }
@@ -18,6 +12,33 @@
     border: 1px solid #EBEBEB;
     border-radius: 4px;
     padding: 15px 350px 15px 15px;
+    width: 100%
+}
+
+.form select:focus {
+    outline: none;
+}
+
+.form input[type=text]:focus {
+    outline: none;
+    box-shadow: inset 0 0 10px red
+}
+
+.form .sel span {
+    pointer-events: none;
+    position: absolute;
+    width: 24px;
+    height: 25px;
+    right: 5px;
+    top: calc(50% + 5px);
+    transform: translateY(-50%);
+    background: white;
+    padding-top: 3px
+}
+
+.form .sel svg {
+    color: #777;
+    font-size: 1.1rem
 }
 
 .form input[type=submit] {
@@ -27,10 +48,11 @@
     padding: 15px 30px;
     max-width: max-content;
     background: #47CB43;
+    transition: all .3s
 }
 
-.form select {
-
+.form input[type=submit]:hover {
+    background: #067800
 }
 
 .form input, .radios {
@@ -39,20 +61,3 @@
     border-radius: 4px;
     padding: 15px 350px 15px 15px;
 }
-
-
-
-/*.radios input {*/
-/*    margin: 0 0 0 5px;*/
-/*}*/
-
-/*.radios label {*/
-/*    margin-left: 20px;*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*.select select {*/
-/*    margin-right: 15px;*/
-/*    min-width: 60px;*/
-/*    cursor: pointer*/
-/*}*/
