--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -25,7 +25,7 @@
 
 .form input[type=text]:focus {
     outline: none;
-    box-shadow: inset 0 0 10px red
+    box-shadow: inset 0 0 5px #eaeaea
 }
 
 .form .sel span {
@@ -46,7 +46,7 @@
 }
 
 .form input[type=submit] {
-    margin-top: 30px;
+    margin-top: 20px;
     color: white;
     max-width: max-content;
     background: #47CB43;
