--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -10,20 +10,26 @@
     min-height: 300px
 }
 
-.hr1 h1 {
-    font-size: 2rem;
-    margin: 30px 0 15px 0
+.d1 {
+    position: absolute;
+    left: 0;
+    top: 30px;
+    max-width: max-content
 }
 
-.hr1 form {
+.d1 h1 {
+    font-size: 2rem;
+    margin-bottom: 15px
+}
+
+.d1 form {
     width: 100%;
     max-width: 680px;
     position: relative;
-    margin-bottom: 30px;
     z-index: 2;
 }
 
-.hr1 input[type=text] {
+.d1 input[type=text] {
     width: 100%;
     min-height: 70px;
     font-size: 1rem;
@@ -32,12 +38,12 @@
     border: 1px solid #47CB43
 }
 
-.hr1 input[type=text]:focus {
+.d1 input[type=text]:focus {
     outline: transparent;
     box-shadow: inset 0 5px 10px #d6fed5;
 }
 
-.hr1 input[type=submit] {
+.d1 input[type=submit] {
     position: absolute;
     color: #47CB43;
     text-shadow: 0 0 0 #47CB43;
@@ -47,44 +53,6 @@
     background-color: transparent;
     border: none;
     font-size: 1rem
-}
-
-.d2 {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    z-index: 1;
-    color: #71C36E;
-}
-
-.d2 > div > div {
-    max-width: 380px;
-    justify-content: flex-end;
-    margin-bottom: 30px;
-    line-height: 140%
-}
-
-.d2 b {
-    font-size: 1.1rem;
-    margin-bottom: 5px
-}
-
-.pg {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 1.3rem;
-    max-width: 100px;
-    color: #71C36E;
-    z-index: 3
-}
-
-.pg button {
-    background-color: transparent;
-    border: none;
-    font-size: 1.5rem;
-    padding-bottom: 3px
 }
 
 .best {
