--- a/components/public/home/hero.module.css
+++ b/components/public/home/hero.module.css
@@ -15,15 +15,17 @@
 }
 
 .d1 > div {
-    transition: all .5s;
     position: absolute;
     width: 100%;
     height: 300px;
-    opacity: 0
+    filter: grayscale(1);
+    opacity: 0;
+    transition: filter .1s, opacity .5s
 }
 
 .d1 > div.show {
-    opacity: 1
+    opacity: 1;
+    filter: initial
 }
 
 .d1 > div > div {
