--- a/components/public/home/hero.module.css
+++ b/components/public/home/hero.module.css
@@ -7,9 +7,7 @@
 
 .d1 {
     width: 100%;
-    height: 100%;
     bottom: 0;
-    z-index: 1;
     color: #71C36E;
     position: relative;
 }
@@ -17,7 +15,6 @@
 .d1 > div {
     position: absolute;
     width: 100%;
-    height: 300px;
     filter: grayscale(1);
     opacity: 0;
     transition: filter .1s, opacity .5s
@@ -46,7 +43,6 @@
     left: 50%;
     transform: translateX(-50%);
     max-width: 100px;
-    z-index: 3;
     font-size: 1.2rem;
     color: #71C36E
 }
@@ -64,4 +60,93 @@
 
 .arrow_disabled {
     fill: #97d094
+}
+
+.d2 {
+    position: absolute;
+    left: 0;
+    top: 30px;
+    width: 100%;
+    max-width: 680px;
+    z-index: 2
+}
+
+.d2 h1 {
+    font-size: 2rem;
+    margin-bottom: 15px
+}
+
+.d2 form {
+    width: 100%;
+    position: relative
+}
+
+.d2 input[type=text] {
+    width: 100%;
+    min-height: 70px;
+    font-size: 1rem;
+    text-indent: 30px;
+    border-radius: 8px;
+    border: 1px solid #47CB43
+}
+
+.d2 input[type=text]:focus {
+    outline: transparent;
+    box-shadow: inset 0 5px 10px #d6fed5;
+}
+
+.d2 input[type=submit] {
+    position: absolute;
+    color: #47CB43;
+    text-shadow: 0 0 0 #47CB43;
+    height: 100%;
+    width: max-content;
+    right: 4%;
+    background-color: transparent;
+    border: none;
+    font-size: 1rem
+}
+
+@media all and (max-width: 1230px) {
+    .wrap, .d2 {
+        padding: 0 15px
+    }
+}
+
+@media all and (max-width: 830px) {
+
+    .wrap {
+        height: 400px;
+    }
+
+    .d2 {
+        position: initial;
+        max-width: 100%;
+        margin: 20px 0
+    }
+
+    .d2 h1 {
+        text-align: center
+    }
+
+    .d1 > div {
+        justify-content: space-around;
+        height: 400px
+    }
+
+    .d1 > div > div {
+        justify-content: flex-start;
+    }
+
+    .d1 img {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 0;
+    }
+
+    .d1 > div > div {
+        max-width: 100%;
+        text-align: center
+    }
 }
