--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -23,9 +23,9 @@
     outline: none;
 }
 
-.form input[type=text]:focus {
+.form input[type=text]:focus, .form input[type=password]:focus {
     outline: none;
-    box-shadow: inset 0 0 5px #eaeaea
+    box-shadow: inset 0 0 5px #baffb9
 }
 
 .form .sel span {
