--- a/components/public/order.module.css
+++ b/components/public/order.module.css
@@ -63,10 +63,22 @@
     color: #9D9D9D
 }
 
+@media screen and (max-width: 1230px) {
+    .box {
+        border-radius: 0;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        margin-bottom: 0
+    }
+    .box:first-of-type {
+        border-top: 1px solid #B9B9B9
+    }
+}
+
 @media screen and (max-width: 1000px) {
     .box {
-        padding: 20px 25px;
-        border-radius: 8px
+        padding: 20px 25px
     }
 
     .box > div:nth-child(1) {
@@ -112,16 +124,7 @@
 
 @media screen and (max-width: 600px) {
     .box {
-        padding: 20px 15px;
-        border-radius: 0;
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        margin-bottom: 0
-    }
-
-    .box:first-of-type {
-        border-top: 1px solid #B9B9B9
+        padding: 20px 15px
     }
 
     .box > div:nth-child(1) > span {
