--- a/components/public/public-layout.module.css
+++ b/components/public/public-layout.module.css
@@ -41,7 +41,13 @@
     padding: 5px 10px;
     border: 1px solid #CCC;
     border-radius: 3px;
-    position: relative
+    position: relative;
+    transition: all .3s
+}
+
+.usr:hover {
+    background-color: #4DA8FE;
+    color: white
 }
 
 .usr ul {
@@ -52,7 +58,9 @@
     left: -1px;
     top: 28px;
     width: calc(100% + 2px);
-    background-color: white
+    background-color: white;
+    z-index: 10;
+    color: black
 }
 
 .usr > ul > li {
@@ -62,8 +70,6 @@
     border-right: 1px solid #CCC;
     border-bottom: 1px solid #CCC;
 }
-
-
 
 .hbg {
     display: none;
