--- a/components/public/public-layout.module.css
+++ b/components/public/public-layout.module.css
@@ -38,16 +38,12 @@
 }
 
 .usr {
-    padding: 5px 10px;
-    border: 1px solid #CCC;
-    border-radius: 3px;
     position: relative;
     transition: all .3s
 }
 
-.usr:hover {
-    background-color: #4DA8FE;
-    color: white
+.usr > a {
+    color: #4DA8FE!important;
 }
 
 .usr ul {
@@ -58,17 +54,16 @@
     left: -1px;
     top: 28px;
     width: calc(100% + 2px);
-    background-color: white;
+    background-color: #f8f8f8;
     z-index: 10;
-    color: black
+    color: black;
+    border-radius: 0 0 10px 10px
 }
 
 .usr > ul > li {
     margin: 0;
     padding: 10px;
-    border-left: 1px solid #CCC;
-    border-right: 1px solid #CCC;
-    border-bottom: 1px solid #CCC;
+    border-top: 1px solid #DDD;
 }
 
 .hbg {
