--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: Roboto;
+    src: url(/fonts/Roboto-Regular.ttf);
+    font-weight: normal;
+    font-display: swap
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(/fonts/Roboto-Bold.ttf);
+    font-weight: bold;
+    font-display: swap
+}
+
 html {
     scroll-behavior: smooth;
     box-sizing: border-box
@@ -7,7 +21,7 @@ html {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
-    font-family: Montserrat, Arial, "Helvetica Neue", sans-serif
+    font-family: Roboto, Arial, "Helvetica Neue", sans-serif
 }
 
 *:focus:not(:focus-visible) {
