--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,8 @@ html {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
-    font-family: Roboto, Arial, "Helvetica Neue", sans-serif
+    font-family: Roboto, Arial, "Helvetica Neue", sans-serif;
+    line-height: 140%;
 }
 
 *:focus:not(:focus-visible) {
