--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@ html {
     margin: 0;
     padding: 0;
     font-family: Roboto, Arial, "Helvetica Neue", sans-serif;
-    line-height: 140%;
+    line-height: 140%
 }
 
 *:focus:not(:focus-visible) {
