max has a 15 padding now

--- a/components/public/home/comments.module.css
+++ b/components/public/home/comments.module.css
@@ -1,6 +1,7 @@
 .wrap {
     position: relative;
-    overflow-x: hidden
+    overflow-x: hidden;
+    max-width: 1200px;
 }
 
 .wrap > div:nth-child(1) {
