--- a/components/public/home/hero.module.css
+++ b/components/public/home/hero.module.css
@@ -64,7 +64,7 @@
 
 .d2 {
     position: absolute;
-    left: 0;
+    left: 15px;
     top: 30px;
     width: 100%;
     max-width: 680px;
@@ -105,12 +105,6 @@
     background-color: transparent;
     border: none;
     font-size: 1rem
-}
-
-@media all and (max-width: 1230px) {
-    .wrap, .d2 {
-        padding: 0 15px
-    }
 }
 
 @media all and (max-width: 830px) {
