--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -1,6 +1,7 @@
 .d1 {
     max-width: 400px;
     position: relative;
+    margin-right: 50px;
 }
 
 .d1 > h1 {
@@ -22,7 +23,7 @@
     font-size: 1rem;
     position: absolute;
     left: 275px;
-    top: 207px;
+    top: 219px;
 }
 
 .a1 {
@@ -40,3 +41,36 @@
 .a1 p:nth-child(1) {
     font-weight: bold;
 }
+
+
+
+@media screen and (max-width: 1230px) {
+    .d1 {
+        display: block;
+        margin-left: 50px;
+    }
+    .a1 {
+        display: block;
+        margin-left: 50px;
+        width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+    .d1 {
+        display: block;
+        margin-left: 20px;
+    }
+    .a1 {
+        display: block;
+        margin-left: 20px;
+    }
+    .p1 {
+        position: absolute;
+        left: 162px;
+        top: 209px;
+    }
+
+}
+
