--- a/styles/for-masters.module.css
+++ b/styles/for-masters.module.css
@@ -206,13 +206,13 @@
     }
 
     .m1 > div img {
-        left: 20px;
+        left: 10px;
     }
 
     .m1 > div p {
         margin-top: 30px;
         border-radius: 4px;
-        padding: 20px 25px 20px 150px;
+        padding: 15px 15px 15px 140px
     }
 
 }
@@ -233,17 +233,6 @@
         line-height: normal;
     }
 
-    .m1 > div p {
-        margin-top: 10px;
-        border-radius: 4px;
-        padding: 15px 25px 15px 130px;
-    }
-
-
-    .m1 > div img {
-        left: 10px;
-    }
-
     .b1 {
         margin-top: 20px;
         padding: 13px 60px 15px 60px;
@@ -253,8 +242,7 @@
     }
 
     .ho img {
-        object-fit: cover;
-        width: 100%;
+        margin: 0 auto
     }
 
     .g1 p:nth-child(2) {
