--- a/components/public/home/hero.module.css
+++ b/components/public/home/hero.module.css
@@ -1,6 +1,6 @@
 .wrap {
     width: 100%;
-    height: 300px;
+    height: 335px;
     position: relative;
     overflow: hidden;
 }
@@ -28,7 +28,6 @@
 .d1 > div > div {
     max-width: 380px;
     justify-content: flex-end;
-    margin-bottom: 30px;
     line-height: 140%
 }
 
@@ -71,6 +70,14 @@
     z-index: 2
 }
 
+.d2 span {
+    color: #47CB43;
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+
+
 .d2 h1 {
     font-size: 2rem;
     margin-bottom: 15px
@@ -82,6 +89,7 @@
 }
 
 .d2 input[type=text] {
+    margin-top: 10px;
     width: 100%;
     min-height: 70px;
     font-size: 1rem;
@@ -99,7 +107,7 @@
     position: absolute;
     color: #47CB43;
     text-shadow: 0 0 0 #47CB43;
-    height: 100%;
+    height: 110%;
     width: max-content;
     right: 4%;
     background-color: transparent;
@@ -142,6 +150,10 @@
     .d1 > div > div {
         max-width: 100%;
         text-align: center
+    }
+
+    .d2 div p {
+        display: none;
     }
 }
 
