--- a/styles/for-masters.module.css
+++ b/styles/for-masters.module.css
@@ -177,12 +177,11 @@
     }
 
     .img3 {
-        display: none;
+        width: 470px;
+        height: 245px;
     }
 
-    .m3 {
-        max-width: 100%;
-    }
+
 
 
 }
@@ -214,6 +213,9 @@
         font-size: 1rem;
         margin-left: auto;
         margin-right: auto
+    }
+    .m3 {
+        max-width: 100%;
     }
 }
 
