--- a/styles/for-masters.module.css
+++ b/styles/for-masters.module.css
@@ -214,6 +214,11 @@
         margin-left: auto;
         margin-right: auto
     }
+    .img3 {
+        margin: 80px auto;
+
+    }
+
     .m3 {
         max-width: 100%;
     }
