--- a/styles/for-masters.module.css
+++ b/styles/for-masters.module.css
@@ -180,13 +180,22 @@
         width: 470px;
         height: 245px;
     }
-
-
-
-
 }
 
-@media screen and (max-width: 850px) {
+
+
+@media all and (max-width: 1000px) {
+    .img3 {
+        margin: 80px auto
+    }
+    .m3, .m4 {
+        width: 100%;
+        max-width: 100%;
+    }
+}
+@media all and (max-width: 850px) {
+
+
 
     .m1 {
         display: block;
@@ -214,18 +223,12 @@
         margin-left: auto;
         margin-right: auto
     }
-    .img3 {
-        margin: 80px auto;
 
-    }
 
-    .m3 {
-        max-width: 100%;
-    }
 }
 
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 560px) {
 
     .g1 h2 {
         margin-top: 50px;
@@ -253,6 +256,10 @@
 
     .sp {
         display: none
+    }
+    .img3 {
+        width: 291px;
+        height: 152px;
     }
 }
 
