--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -7,11 +7,8 @@
     width: 100%
 }
 
-.form input, .form select {
+.form input, .form select, .form textarea {
     font-size: 1rem;
-}
-
-.form input, .form select {
     margin-top: 10px;
     border: 1px solid #EBEBEB;
     border-radius: 4px;
@@ -19,11 +16,11 @@
     padding: 15px 20px
 }
 
-.form select:focus {
+.form select:focus, .form textarea:focus {
     outline: none;
 }
 
-.form input[type=text]:focus, .form input[type=password]:focus {
+.form input[type=text]:focus, .form input[type=password]:focus, .form textarea:focus {
     outline: none;
     box-shadow: inset 0 0 5px #baffb9
 }
