--- a/pages/edit-master/edit.module.css
+++ b/pages/edit-master/edit.module.css
@@ -31,12 +31,16 @@
 }
 
 .list {
-    border: 1px solid #CCC
+    border: 1px solid #CCC;
+}
+
+.list ul {
+    list-style: none
 }
 
 .list > li {
     margin: 15px 0;
-    padding: 0 15px
+    padding: 0 15px;
 }
 
 .list > li > *:first-child {
@@ -45,13 +49,17 @@
 }
 
 .list > li > div {
-    width: 100%;
-    max-width: 360px;
+    width: calc(100% - 200px - 70px - 30px);
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     height: max-content;
-    transition: all .3s
+    transition: all .3s;
+}
+
+.list > li > div p, .list > li li {
+    line-height: 200%
 }
 
 .list li > button, .ava label {
