--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -7,7 +7,9 @@
     width: 100%
 }
 
-.form input, .form select, .form textarea {
+.form input,
+.form select,
+.form textarea {
     font-size: 1rem;
     margin-top: 10px;
     border: 1px solid #EBEBEB;
@@ -16,11 +18,15 @@
     padding: 15px 20px
 }
 
-.form select:focus, .form textarea:focus {
+.form select:focus,
+.form textarea:focus {
     outline: none;
 }
 
-.form input[type=text]:focus, .form input[type=password]:focus, .form textarea:focus {
+.form input[type=text]:focus,
+.form input[type=password]:focus,
+.form input[type=number]:focus,
+.form textarea:focus {
     outline: none;
     box-shadow: inset 0 0 5px #baffb9
 }
@@ -121,6 +127,7 @@
     margin-top: 10px;
     font-size: 1.2rem
 }
+
 .form > p {
     margin: 10px 0 2px 0;
     color: #777
