--- a/pages/master/[id]/edit/edit.module.css
+++ b/pages/master/[id]/edit/edit.module.css
@@ -50,7 +50,7 @@
 
 .list > li > div {
     width: calc(100% - 200px - 70px - 30px);
-    max-width: 600px;
+    max-width: 800px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -97,7 +97,7 @@
 }
 
 .list .edit {
-    background-color: #EEE;
+    background-color: #f8f8f8;
     padding: 15px
 }
 
