--- a/components/public/master/info.module.css
+++ b/components/public/master/info.module.css
@@ -4,8 +4,17 @@
     border-radius: 8px;
     padding: 30px 35px;
 }
-.left b {
-    margin: 10px 0;
+
+.left b:not(:first-child) {
+    margin-top: 25px;
+}
+
+.left b:nth-child(5) {
+    color: #47CB43;
+}
+
+.left p {
+    color: #5f5f5f;
 }
 
 .left div {
@@ -23,12 +32,11 @@
     color: #6f7580;
     border-bottom: 1px dashed #e2e2e2;
 }
+
 /*z-index: 1;*/
 /*overflow: hidden;*/
 /*text-overflow: ellipsis;*/
 /*white-space: nowrap;*/
-
-
 
 
 .left div li:hover {
@@ -39,7 +47,7 @@
     border-bottom: 1px dashed #afafaf;
 }
 
-.left div li span{
-   position: absolute;
-   right: 0;
+.left div li span {
+    position: absolute;
+    right: 0;
 }
